overlap regions faster